# AzLocalDev

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  SESSION-NOTES.md  index.html
docs/assets/: app.js  style.css
emu/module/appinsights/core/: Cargo.toml
emu/module/appinsights/core/src/: lib.rs  model.rs  otlp.rs
emu/module/appinsights/engine/: Cargo.toml
emu/module/appinsights/engine/src/: lib.rs
emu/module/servicebus/amqp/: Cargo.toml
emu/module/servicebus/amqp/src/: cbs.rs  connection.rs  convert.rs  dev_cert.rs  lib.rs  links.rs  listener.rs  sasl.rs  session_filter.rs
emu/module/servicebus/core/: Cargo.toml
emu/module/servicebus/core/src/: actor.rs  error.rs  lib.rs  model.rs
emu/module/servicebus/core/src/actor/: command.rs  handle.rs  mod.rs  state.rs  task.rs
emu/module/servicebus/engine/: Cargo.toml
emu/module/servicebus/engine/src/: lib.rs
emu/module/storage/blob/core/: Cargo.toml
emu/module/storage/blob/core/src/: error.rs  lib.rs  model.rs
emu/module/storage/blob/engine/: Cargo.toml
emu/module/storage/blob/engine/src/: lib.rs
emu/module/storage/blob/server/: Cargo.toml
emu/module/storage/blob/server/src/: lib.rs  xml.rs
emu/module/storage/engine/: Cargo.toml
emu/module/storage/engine/src/: engine.rs  lib.rs  registry.rs  routes_blob.rs  routes_queue.rs  routes_table.rs
emu/module/storage/queue/core/: Cargo.toml
emu/module/storage/queue/core/src/: error.rs  lib.rs  model.rs
emu/module/storage/queue/server/: Cargo.toml
emu/module/storage/queue/server/src/: lib.rs  xml.rs
emu/module/storage/table/core/: Cargo.toml
emu/module/storage/table/core/src/: error.rs  lib.rs  model.rs
emu/module/storage/table/server/: Cargo.toml
emu/module/storage/table/server/src/: lib.rs
emu/services/dev-cert/: Cargo.toml
emu/services/dev-cert/src/: lib.rs
emu/services/engine/: Cargo.toml
emu/services/engine/src/: lib.rs
emu/services/persistence/: Cargo.toml
emu/services/persistence/src/: lib.rs
emu/ui/gui/: Cargo.toml
emu/ui/gui/src/: dev_cert_prompt.rs  icon.rs  main.rs
emu/ui/web/: Cargo.toml  build.rs
emu/ui/web/assets/: app.js  index.html  style.css
emu/ui/web/assets/js/: 01-state-routing.js  02-ui-core.js  03-app-shell.js  04-view-home.js  05-view-group.js  06-forms-basic.js  07-view-storage-queues-tables.js  08-forms-resource.js  09-view-servicebus.js  10-view-storage-blob.js  11-view-appinsights.js  12-events-boot.js
emu/ui/web/src/: lib.rs  update.rs
emu/ui/web/tests/: class_names.rs
