[workspace]
resolver = "2"
members = [
    "emu/module/servicebus/core",
    "emu/module/servicebus/amqp",
    "emu/module/servicebus/engine",
    "emu/module/storage/blob/core",
    "emu/module/storage/blob/server",
    "emu/module/storage/blob/engine",
    "emu/module/storage/queue/core",
    "emu/module/storage/queue/server",
    "emu/module/storage/table/core",
    "emu/module/storage/table/server",
    "emu/module/appinsights/core",
    "emu/module/appinsights/engine",
    "emu/services/dev-cert",
    "emu/services/engine",
    "emu/ui/web",
    "emu/ui/gui",
]

[workspace.package]
# "-dev" marks a local/dev-machine build. The release workflow overwrites this with the real
# tag version (vX.Y.Z -> X.Y.Z, no suffix) before building, so only official release builds
# ever report a plain X.Y.Z version - see .github/workflows/release.yml and
# emu/ui/web/src/update.rs (this is what `/api/version` and the update-checker report).
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
anyhow = "1"
thiserror = "1"
bytes = "1"
async-trait = "0.1"
base64 = "0.22"
# Powers the in-app "Check for updates" feature: queries GitHub Releases for this repo and,
# when confirmed by the user, downloads + replaces the running exe in place.
self_update = { version = "0.44", features = ["archive-zip", "compression-zip-deflate"] }

emu-servicebus-core = { path = "emu/module/servicebus/core" }
emu-servicebus-amqp = { path = "emu/module/servicebus/amqp" }
emu-registry = { path = "emu/services/engine" }
emu-servicebus-engine = { path = "emu/module/servicebus/engine" }
emu-storage-blob-core = { path = "emu/module/storage/blob/core" }
emu-storage-blob-server = { path = "emu/module/storage/blob/server" }
emu-storage-blob-engine = { path = "emu/module/storage/blob/engine" }
emu-storage-queue-core = { path = "emu/module/storage/queue/core" }
emu-storage-queue-server = { path = "emu/module/storage/queue/server" }
emu-storage-table-core = { path = "emu/module/storage/table/core" }
emu-storage-table-server = { path = "emu/module/storage/table/server" }
emu-appinsights-core = { path = "emu/module/appinsights/core" }
emu-appinsights-engine = { path = "emu/module/appinsights/engine" }
emu-dev-cert = { path = "emu/services/dev-cert" }
emu-web = { path = "emu/ui/web" }

# Locally patched fe2o3-amqp: adds an optional custom delivery-tag override on
# `Sendable`/`Sender::send`, so we can send AMQP delivery-tags that Azure Service
# Bus clients can parse as a 16-byte lock-token GUID (the upstream crate only
# exposes a fixed 4-byte auto-generated tag with no override, and the Azure SDK
# derives the lock token from the delivery-tag bytes, so it always resolves to
# an empty GUID otherwise, breaking Complete/Abandon/DeadLetter).
[patch.crates-io]
fe2o3-amqp = { path = "vendor/fe2o3-amqp" }

