[package]
name = "emu-dev-cert"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
rustls-pemfile = "2"
dirs = "5"
