[package]
name = "emu-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "emu-engine"
path = "src/main.rs"

[dependencies]
emu-registry = { workspace = true }
emu-servicebus-engine = { workspace = true }
emu-storage-blob-engine = { workspace = true }
emu-web = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tao = "0.30"
tray-icon = "0.19"
open = "5"
resvg = "0.47"
