[package]
name = "emu-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "AzLocalDev"
path = "src/main.rs"

[dependencies]
emu-registry = { workspace = true }
emu-servicebus-engine = { workspace = true }
emu-storage-engine = { workspace = true }
emu-appinsights-engine = { workspace = true }
emu-dev-cert = { workspace = true }
emu-web = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tao = "0.30"
tray-icon = "0.19"
open = "5"
resvg = "0.47"
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
