[package]
name = "emu-appinsights-engine"
version.workspace = true
edition.workspace = true

[dependencies]
emu-appinsights-core = { workspace = true }
emu-registry = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
flate2 = "1"
