[package]
name = "emu-servicebus-amqp"
version.workspace = true
edition.workspace = true

[dependencies]
emu-servicebus-core = { workspace = true }
emu-dev-cert = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
fe2o3-amqp = { version = "0.15", features = ["acceptor", "rustls"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
