[package]
name = "emu-servicebus-engine"
version.workspace = true
edition.workspace = true

[dependencies]
emu-servicebus-core = { workspace = true }
emu-servicebus-amqp = { workspace = true }
emu-registry = { workspace = true }
emu-persistence = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
axum = "0.7"
